[project]
name = "multi_replace_file_content_tool"
version = "0.1.1"
description = "Edit multiple non-adjacent blocks in a single file with one call."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "openchadpy>=0.1.23",
    "types-aiofiles>=25.1.0.20260518",
]
